feat: Integrate Google Generative AI for chat functionality
Adds the `@google/genai` package and initializes the Gemini AI client.
Introduces `ChatMessage` and `ChatState` types for managing chat messages and state.
Implements a new `ChatView` component for displaying and interacting with the AI chatbot.
Adds chat-related UI elements and logic to the main `App.tsx` and `supabaseBackend.ts` to handle sending and receiving messages.
Updates `index.html` and `package.json` to include the new dependency.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "framer-motion": "https://esm.sh/framer-motion@^12.31.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.94.1"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.94.1",
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0"
   }
 }
 </script>
